[tool.poetry]
name = "brickschema"
version = "0.6.0a1"
description = "A library for working with the Brick ontology for buildings (brickschema.org)"
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
include = ["brickschema/ontologies", "tests/data", "brickschema/web"]
homepage = "https://brickschema.org"
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
rdflib = "^6.1"
owlrl = "^6.0"
pytest = "^6.2"
pyshacl = "^0.18"
requests = "^2.25.0"
importlib-resources = "^3.3.0"
click-spinner = {optional = true, version="^0.1.10"}
tabulate = {optional = true, version="^0.8.7"}
Jinja2 = {optional = true, version="^3.0"}
xlrd = {optional = true, version="^1.2.0"}
PyYAML = {optional = true, version="^5.3.1"}
typer = {optional = true, version = "^0.3.2"}
Flask = {optional = true, version = "^2.0"}
colorama = {optional = true, version="^0.4.4"}
dedupe = {optional = true, version = "^2.0"}
reasonable = {optional = true, version="^0.1.53"}
sqlalchemy = {optional = true, version="^1.3"}

[tool.poetry.scripts]
brick_validate = "brickschema.bin.brick_validate:main"
brickify = "brickschema.brickify.main:app"

[tool.poetry.extras]
allegro = ["docker"]
brickify = ["click-spinner", "tabulate", "Jinja2", "xlrd", "PyYAML", "typer"]
web = ["Flask"]
merge = ["dedupe", "colorama"]
orm = ["sqlalchemy"]
reasonable = ["reasonable"]
all = ["docker","click-spinner", "tabulate", "Jinja2", "xlrd", "PyYAML", "typer", "Flask", "dedupe", "colorama", "reasonable", "sqlalchemy"]

[tool.poetry.dev-dependencies]
pre-commit = "^2.1"
flake8 = "^3.7"
tqdm = "^4.56.0"
pytest-xdist = {extras = ["psutil"], version = "^2.3.0"}
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"
