[tool.poetry]
name = "brickschema"
version = "0.7.2a2"
description = "A library for working with the Brick ontology for buildings (brickschema.org)"
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
include = ["brickschema/ontologies", "tests/data", "brickschema/web"]
homepage = "https://brickschema.org"
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rdflib = "^6.2"
owlrl = "^6.0"

pyshacl = "^0.23"
requests = "^2.25.0"
importlib-resources = "^3.3.0"
click-spinner = {optional = true, version="^0.1.10"}
tabulate = {optional = true, version="^0.8.7"}
Jinja2 = {optional = true, version="^3.1"}
xlrd = {optional = true, version="^1.2.0"}
PyYAML = {optional = true, version="^6.0.1"}
typer = {optional = true, version = "^0.4.1"}
Flask = {optional = true, version = "^2.3"}
colorama = {optional = true, version="^0.4.4"}
dedupe = {optional = true, version = "^2.0"}
reasonable = {optional = true, version="^0.2.2a4"}
sqlalchemy = {optional = true, version="^1.4"}
rdflib_sqlalchemy = {optional = true, version = "^0.5"}
BAC0 = {optional = true, version = "^22.9"}
networkx = {optional = true, version="^2.6"}

[tool.poetry.group.dev.dependencies]
flake8 = "^3.7"
pre-commit = "^2.1"
tqdm = "^4.56.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2"
pytest-xdist = {extras = ["psutil"], version = "^2.3.0"}

[tool.poetry.group.docs.dependencies]
Sphinx = "^4.2"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.scripts]
brick_validate = "brickschema.bin.brick_validate:main"
brickify = "brickschema.brickify.main:app"

[tool.poetry.extras]
allegro = ["docker"]
brickify = ["click-spinner", "tabulate", "Jinja2", "xlrd", "PyYAML", "typer"]
web = ["Flask"]
merge = ["dedupe", "colorama"]
orm = ["sqlalchemy"]
reasonable = ["reasonable"]
persistence = ["rdflib_sqlalchemy", "sqlalchemy"]
bacnet = ["BAC0"]
networkx = ["networkx"]
all = ["docker","click-spinner", "tabulate", "Jinja2", "xlrd", "PyYAML", "typer", "Flask", "dedupe", "colorama", "reasonable", "sqlalchemy", "rdflib_sqlalchemy", "BAC0", "networkx"]

[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"
