[tool.poetry]
name = "brickschema"
version = "0.7.6"
description = "A library for working with the Brick ontology for buildings (brickschema.org)"
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
include = ["brickschema/ontologies", "tests/data", "brickschema/web", "brickschema/topquadrant_shacl"]
homepage = "https://brickschema.org"
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^7.0"
owlrl = "^7.1"

pyshacl = "^0.30"
requests = "^2.25.0"
importlib-resources = "^3.3.0"
click-spinner = {optional = true, version="^0.1.10"}
tabulate = {optional = true, version="^0.8.7"}
Jinja2 = {optional = true, version="^3.1"}
xlrd = {optional = true, version="^1.2.0"}
PyYAML = {optional = true, version="^6.0.1"}
typer = {optional = true, version = "^0.4.1"}
Flask = {optional = true, version = "^2.3"}
colorama = {optional = true, version="^0.4.4"}
dedupe = {optional = true, version = "^2.0"}
reasonable = {optional = true, version="^0.2.2a4"}
sqlalchemy = {optional = true, version = ">=2.0"}
BAC0 = {optional = true, version = "^22.9"}
networkx = {optional = true, version="^3.2"}
alembic = {optional = true, version=">=0.8.8"}
six = {optional = true, version=">=1.10.0"}
brickschema-rdflib-sqlalchemy = {optional = true, version="0.6.0"}
setuptools = "^78.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0"
pre-commit = "^2.1"
tqdm = "^4.56.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0"
pytest-xdist = {extras = ["psutil"], version = "^2.3.0"}

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.2"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.scripts]
brick_validate = "brickschema.bin.brick_validate:main"
brickify = "brickschema.brickify.main:app"

[tool.poetry.extras]
allegro = ["docker"]
brickify = ["click-spinner", "tabulate", "Jinja2", "xlrd", "PyYAML", "typer"]
web = ["Flask"]
merge = ["dedupe", "colorama"]
orm = ["sqlalchemy"]
reasonable = ["reasonable"]
persistence = ["sqlalchemy", "alembic", "six", "brickschema-rdflib-sqlalchemy"]
bacnet = ["BAC0"]
networkx = ["networkx"]
all = ["docker","click-spinner", "tabulate", "Jinja2", "xlrd", "PyYAML", "typer", "Flask", "dedupe", "colorama", "reasonable", "sqlalchemy", "BAC0", "networkx", "alembic", "six", "brickschema-rdflib-sqlalchemy"]

[build-system]
requires = ["setuptools", "poetry_core"]
build-backend = "poetry.core.masonry.api"
